# twich_parser_service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
tlparser/: .dockerignore  Dockerfile.dev  Dockerfile.prd  README.md  entrypoint-tests.sh  entrypoint-web.prd.sh  entrypoint.sh  pyproject.toml
tlparser/docker/: .dockerignore  Dockerfile.nginx.prd  Dockerfile.pytest.tests  Dockerfile.pytest.tests.component  Dockerfile.pytest.tests.integration  Dockerfile.uvicorn.dev  Dockerfile.uvicorn.prd
tlparser/docs/: index.rst
tlparser/docs/nginx/: Dockerfile  nginx.conf
tlparser/env/development/: .env.dev.compose  .env.dev.compose.example  .env.dev.mongo  .env.dev.redis  .env.dev.web  .env.dev.web.example
tlparser/env/production/: .env.prd.compose  .env.prd.compose.example  .env.prd.kafka.example  .env.prd.mongo  .env.prd.web  .env.prd.web.example
tlparser/env/tests/: .env.tests.compose  .env.tests.compose.example  .env.tests.elastic.example  .env.tests.mongo  .env.tests.mongo.example  .env.tests.redis.example  .env.tests.web  .env.tests.web.example
tlparser/nginx/: Dockerfile  nginx.conf
tlparser/scripts/: entrypoint-pytest.tests.component.sh  entrypoint-pytest.tests.sh  entrypoint-uvicorn.dev.sh  entrypoint-uvicorn.prd.sh
tlparser/src/: container.py  main.py  metadata.py
tlparser/src/api/v1/: routes.py
tlparser/src/api/v1/endpoints/: lamoda.py  twich.py
tlparser/src/application/commands/: __init__.py  base.py  common.py  game.py  stream.py  user.py
tlparser/src/application/dependencies/twich/: token_dependency.py
tlparser/src/application/dto/: __init__.py  base.py  common.py  game.py  result.py  stream.py  user.py
tlparser/src/application/dtos/requests/: __init__.py  base.py  game.py  stream.py  user.py
tlparser/src/application/dtos/responses/: __init__.py  base.py  game.py  stream.py  user.py
tlparser/src/application/exceptions/: __init__.py  base.py  common.py
tlparser/src/application/exceptions/handlers/: __init__.py  domain_exception_handler.py
tlparser/src/application/exceptions/twich/: game_exceptions.py
tlparser/src/application/fields/lamoda/: product_fields.py
tlparser/src/application/fields/twich/: stream_fields.py  user_fields.py
tlparser/src/application/handlers/command/: __init__.py  game.py  stream.py  user.py
tlparser/src/application/handlers/commands/: __init__.py  game.py  stream.py  user.py
tlparser/src/application/handlers/exceptions/: __init__.py
tlparser/src/application/handlers/queries/: __init__.py  game.py  stream.py  user.py
tlparser/src/application/handlers/query/: __init__.py  game.py  stream.py  user.py
tlparser/src/application/handlers/requests/: game.py
tlparser/src/application/interfaces/bus/: __init__.py  command_bus.py  query_bus.py
tlparser/src/application/interfaces/buses/: __init__.py  command_bus.py  query_bus.py
tlparser/src/application/interfaces/handler/: __init__.py  command_handler.py  query_handler.py
tlparser/src/application/interfaces/handlers/: __init__.py  command_handler.py  query_handler.py
tlparser/src/application/interfaces/parser/: base.py  game.py  stream.py  user.py
tlparser/src/application/interfaces/parsers/: __init__.py  base.py  game.py  stream.py  user.py
tlparser/src/application/interfaces/publisher/: base.py  game.py  stream.py  user.py
tlparser/src/application/interfaces/publishers/: __init__.py  base.py  game.py  stream.py  user.py
tlparser/src/application/interfaces/repositories/: __init__.py  base.py  game.py  stream.py  user.py
tlparser/src/application/interfaces/repository/: base.py  game.py  stream.py  user.py
tlparser/src/application/interfaces/services/: __init__.py  base.py  game.py  stream.py  user.py
tlparser/src/application/mappers/lamoda/: product_mapper.py
tlparser/src/application/mappers/twich/: game_mapper.py  stream_mapper.py  user_mapper.py
tlparser/src/application/queries/: __init__.py  base.py  common.py  game.py  stream.py  user.py
tlparser/src/application/schemas/base/: base_schema.py
tlparser/src/application/schemas/lamoda/: product_schema.py
tlparser/src/application/schemas/twich/: game_schema.py  stream_schema.py  user_schema.py
tlparser/src/application/services/: __init__.py  game.py
tlparser/src/application/services/decorators/: __init__.py  service_decorator.py  user.py  (+1 more)
tlparser/src/common/config/: __init__.py  settings.py
tlparser/src/common/interfaces/: __init__.py  decorator.py  exception_handler.py  logger.py
tlparser/src/common/utils/: __init__.py  decorators.py
tlparser/src/config/: lamoda_metadata.py  lamoda_settings.py  metadata.py  settings.py  twich_metadata.py  twich_settings.py
tlparser/src/controllers/: lamoda_controllers.py  twich_controllers.py
tlparser/src/core/: containers.py  decorators.py
tlparser/src/domain/events/: __init__.py  base.py  common.py  game.py  stream.py  user.py
tlparser/src/domain/exceptions/: __init__.py  base.py  common.py
tlparser/src/domain/models/: __init__.py  agroot.py  base.py  common.py  game.py  root.py  stream.py  user.py
tlparser/src/domain/types/: types.py
tlparser/src/exceptions/: lamoda_exceptions.py  twich_exceptions.py
tlparser/src/fields/: lamoda_fields.py  twich_fields.py
tlparser/src/infrastructure/loggers/: __init__.py  stream_logger.py
tlparser/src/presentation/controllers/: game.py  stream.py  user.py
tlparser/src/presentation/exceptions/: domain_exception_handler.py  exception_handler.py
tlparser/src/repositories/: irepositories.py  lamoda_repositories.py  twich_repositories.py
tlparser/src/schemas/: base_schemas.py  lamoda_schemas.py  twich_schemas.py
tlparser/src/services/: lamoda_services.py  twich_services.py
tlparser/src/shared/config/: settings.py
tlparser/src/shared/interfaces/: logger.py
tlparser/src/shared/utils/: __init__.py  decorators.py
tlparser/tests/component/: conftest.py
tlparser/tests/component/test_lamoda_api/: test_products_api.py
tlparser/tests/component/test_twich_api/: test_user_api.py
(+453 files in other folders)
